--- a/Managment/Views/Account/ResetPassword.cshtml
+++ b/Managment/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Management.Common.Models.ResetPasswordDto;
+﻿@model Management.Common.Models.DTO.ResetPasswordDto
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
