--- a/Managment/Views/Account/Login.cshtml
+++ b/Managment/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model Management.Common.Models.LoginModelDto
+﻿@model Management.Common.Models.DTO.LoginModelDto
 
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
@@ -12,6 +12,7 @@
 <div class="login-container">
     <form class="login-form" asp-action="Login" method="post">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
         <h1>Welcome Back</h1>
         <p>Please login to your account</p>
         <div class="input-group">
