--- a/Managment/Views/Shared/_accountLayout.cshtml
+++ b/Managment/Views/Shared/_accountLayout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
    
-    <div class="container mt-5">
+    <div class="container mt-5" style="margin-right: 703px ">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
