--- a/Managment/Views/Project/Index.cshtml
+++ b/Managment/Views/Project/Index.cshtml
@@ -87,9 +87,9 @@
                     </td>
                   
                     <td>
-                        @foreach (var techStack in project.TechStackUsedObj)
+                        @foreach (var techStack in project.TechStackUsed)
                         {
-                            <p>@techStack.Name</p>
+                            <p>@techStack</p>
                         }
                     </td>
                     <td style="display:flex">
